--- a/src/components/panelMessage/panelMessage.module.scss
+++ b/src/components/panelMessage/panelMessage.module.scss
@@ -119,3 +119,24 @@
   align-items: center;
   gap: 16px;
 }
+
+.BlockInput {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 8px;
+  transition: 300ms height;
+}
+
+.HarvestedMessage {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 8px;
+  transition: 300ms height;
+}
